# Riichi-Mahjong

./: .gitignore  CMakeLists.txt  LICENSE  README.md  checks.c  checks.h  common.c  common.h  game.c  main.c
include/: checks.h  common.h  game.h  ting_check.h
src/: checks.c  common.c  game.c  main.c  ting_check.c
